--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <main id="economic-indicators"></main>
   <script src="main.js"></script>
 </body>
 
